Replace Mime-Type header with Content-Type header.
This is what was documented, but the implementation was incorrect.
This is also the header that is defined as part of the HTTP standard.

--- a/docs/config.example.toml
+++ b/docs/config.example.toml
@@ -54,7 +54,7 @@ max_expiry_length = "1 week"
 disallowed_mime_types = []
 
 # Also, we want to allow shortlinks for mail addresses.
-allowed_mime_types = ["http", "https", "mailto"]
+allowed_link_schemes = ["http", "https", "mailto"]
 
 [names]
 # Allow long share names, because why not.
